--- a/index.html
+++ b/index.html
@@ -226,17 +226,17 @@
             <p class="text-muted">Lead Marketer</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://twitter.com/?lang=he">
                     <i class="fa fa-twitter"></i>
                   </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.facebook.com/">
                     <i class="fa fa-facebook"></i>
                   </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.linkedin.com/">
                     <i class="fa fa-linkedin"></i>
                   </a>
               </li>
@@ -264,17 +264,17 @@
         <div class="col-md-4 flex-align-center">
           <ul class="list-inline social-buttons flex-align-center">
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://twitter.com/?lang=he">
                   <i class="fa fa-twitter"></i>
                 </a>
             </li>
             <li class="list-inline-item flex-align-center">
-              <a href="#">
+              <a href="https://www.facebook.com/">
                   <i class="fa fa-facebook"></i>
                 </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.linkedin.com/">
                   <i class="fa fa-linkedin"></i>
                 </a>
             </li>
