changes - footer & me sections

--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-            <h4>Larry Parker</h4>
-            <p class="text-muted">Lead Marketer</p>
+            <img class="mx-auto rounded-circle" src="img/me.jpg" alt="">
+            <h4>Dariya Karetko</h4>
+            <p class="text-muted">Programming student</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://twitter.com/?lang=he">
@@ -280,7 +280,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-md-4 flex-align-center">
+        <!-- <div class="col-md-4 flex-align-center">
             <ul class="list-inline quicklinks">
             <li class="list-inline-item">
               <a href="#">More Me</a>
@@ -289,7 +289,7 @@
               <a href="#">Even More</a>
             </li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
   </footer>
