--- a/index.html
+++ b/index.html
@@ -131,20 +131,9 @@
           <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fa fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="">
-          </a>
-          <div class="portfolio-caption">
-            <h4></h4>
-            <p class="text-muted"></p>
-          </div>
+      <div class="row img-container">
+        
+
         </div>
       </div>
     </div>
